style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Poppins, sans-serif;
}

a {
  text-decoration: none;
  color: inherit;
}

.upper {
  background-color: #f6ebda;
  background-image: url(./images/bg_img_hero.svg),
    url(./images/bg_img_hero2.png);
  background-repeat: no-repeat, no-repeat;
  background-position: 60vw 0vw, 0vw 40vw;
  position: relative;
  z-index: 1;
}

/* header section */
.header-section {
  padding: 4vw 8vw;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav li {
  list-style: none;
  display: inline-block;
  padding: 0 3vh;
}

.highlight {
  color: #ff902b;
}

.search-cart {
  display: flex;
  gap: 3vw;
}

.search-bar {
  width: 17vw;
  background-color: white;
  padding: 0.5vw 1vw;
  border-radius: 2vw;
}

.search-bar input {
  border: none;
  position: relative;
  z-index: 10;
  width: 13vw;
}

.search-bar input:focus {
  outline: none;
}

/* hero section */
.hero-section {
  /* background-color: #F6EBDA; */
  height: 60vw;
  padding: 2vw 8vw;
  display: flex;
}

.coffee-beans {
  width: 20vw;
}

#background-beans1 {
  position: absolute;
  top: 0;
  right: 0;
  /* z-index: 0; */
}

.hero-texts {
  width: 60%;
  padding-right: 10vw;
}

.hero-title {
  font-size: 3rem;
  font-weight: 600;
  padding-bottom: 2.5vw;
}

.hero-paragraph {
  color: #7e7d7a;
  width: 27vw;
  padding-bottom: 2.5vw;
}

.hero-btns {
  display: flex;
  gap: 3vw;
}

.hero-cart {
  width: 2vw;
  background-color: #ff902b;
  height: 2vw;
  padding: 0.5vw;
  border-radius: 50%;
}

.hero-cart img {
  width: 1vw;
  display: inline-block;
  padding-bottom: 1vw;
}

.order-btn {
  width: 14vw;
  background-color: #2f2105;
  text-align: center;
  padding: 0.8vw 1vw;
  display: flex;
  justify-content: center;
  gap: 1vw;
  color: white;
  cursor: pointer;
  border-radius: 2.5vw;
}

.more-menu{
  color: #ff902b;
  font-weight: 700;
  padding: 0.8vw;
  cursor: pointer;
}

.hero-img {
  width: 25vw;
  display: block;
  padding-left: 2vw;
}

.hero-images {
  background-image: url(./images/Ellipse\ 5.png);
  background-repeat: no-repeat;
  background-size: contain;
  width: 27vw;
}

.border1 {
  position: relative;
  bottom: 23vw;
  right: 2vw;
  background-color: rgba(255, 255, 255, 0.483);
  width: 15vw;
  border-radius: 3vw;
  padding: 0.5vw;
  opacity: 0.8;
  height: 4vw;
}

.prod-name {
  position: relative;
  bottom: 26.5vw;
  right: 1.7vw;
  background-color: white;
  font-weight: 600;
  text-align: center;
  border-radius: 2vw;
  padding: 0.5vw;
  width: 14vw;
  height: 3vw;
}

.border2 {
  position: relative;
  bottom: 26vw;
  left: 18vw;
  background-color: rgba(255, 255, 255, 0.483);
  width: 8vw;
  border-radius: 3vw;
  padding: 0.5vw;
  opacity: 0.8;
  height: 4vw;
}

.rating {
  position: relative;
  bottom: 29.5vw;
  left: 18.5vw;
  background-color: white;
  font-weight: 600;
  text-align: center;
  border-radius: 2vw;
  padding: 0.5vw;
  width: 7vw;
  height: 3vw;
}

.border3 {
  position: relative;
  bottom: 17vw;
  left: 1vw;
  background-color: rgba(255, 255, 255, 0.483);
  width: 8vw;
  border-radius: 3vw;
  padding: 0.5vw;
  opacity: 0.8;
  height: 4vw;
}

.likedby {
  position: relative;
  bottom: 20.5vw;
  left: 1.5vw;
  background-color: white;
  font-weight: 600;
  text-align: center;
  border-radius: 2vw;
  padding: 0.5vw;
  width: 7vw;
  height: 3vw;
}

.fa-star{
  color: #FFD057;
}



/* popular products section */
.popular-section{
  /* border: 1px solid black; */
  height: 20vw;
  position: relative;
  z-index: 10;
}

.popular-products{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 4vw;
  height: 0;
}

.popular-product-title{
  font-size: 1.5rem;
  font-weight: 600;
  padding: 4vw 0vw 2vw 0vw;
  position: relative;
  bottom: 26vw;
  left: 10vw;
  width: 20vw;
}

.underlined{
  border-bottom: 3.2px solid #ff902b;
}

.trapizoid img{
  width: 170%;
  height: 26vw;
}

.trapizoid{
  position: relative;
  bottom: 23.5vw;
  left: 7.5vw;
  width: 50vw;
  height: 45vw;
  z-index: -1;
  /* border: 1px solid black; */
}

.popular-prod-card{
  background-color: rgb(255, 255, 255);
  width: 20vw;
  border-radius: 1vw;
  padding: 1vw;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.434);
  cursor: pointer;
  position: relative;
  bottom: 27vw;
}

.pop-prod-img img{
  width: 18vw;
  border-radius: 1vw;
}

.prod-name-price, .tags-cart{
  display: flex;
  justify-content: space-between;
  padding: 1vw 1vw;
}

.prod-name-price p{
  font-weight: 600;
}

.tags{
  display: flex;
  gap: 0.5vw;
}

.tag{
  color: #FF902B;
  border: 1px solid #FF902B;
  padding: 0.3vw 0.8vw;
  font-weight: 500;
}

.block{
  background-color: red;
  width: 100%;
  height: 10vw;
}

/* service section start */
.service-section{
  padding: 0vw 10vw;
}

.services{
  display: flex;
  justify-content: space-evenly;
  padding: 5vw 0vw;
}

.service{
  text-align: center;
  width: 20vw;
  cursor: pointer;
}

/* about section */
.about-section{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10vw;
  background-color: #F6EBDA;
  height: 30vw;
  margin-top: 10vw;
}

.about-img img{
  width: 20vw;
}

.about-img{
  position: relative;
  bottom: 6vw;
  z-index: 11;
}

.back-img img{
  opacity: 0.2;
  height: 25vw;
  width: 100%;
  position: absolute;
  top: 133vw;
}

.about-title{
  padding-bottom: 2vw;
}

.about-subtitle{
  width: 20vw;
  padding-bottom: 1vw;
  font-weight: 600;
}

.about-paragraph{
  width: 30vw;
  font-weight: 400;
  padding-bottom: 1.5vw;
}

.about-btn{
  background-color: #2F2105;
  color: #F4AE26;
  width: 12vw;
  text-align: center;
  padding: 0.8vw 1vw;
  border-radius: 2.5vw;
  cursor: pointer;
  font-weight: 600;
}

.about-img-back{
  width: 21.5vw;
  height: 29vw;
  background-color: rgb(255, 255, 255);
  position: absolute;
  top: 124.6vw;
  left: 18.7vw;
  z-index: 10;
  border-radius: 1vw;
  opacity: 0.3;
  box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.559);
}
/* ... */

